# austin-python

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: checks.yml  release.yml  tests.yml
austin/: __init__.py  aio.py  async.py  base.py  cli.py  config.py  errors.py  events.py  simple.py  stats.py  threads.py
austin/format/: __init__.py  collapsed_stack.py  compress.py  mojo.py  mojo_compress.py  pstat.py  speedscope.py
austin/format/pprof/: __init__.py  __main__.py  profile_pb2.py
austin/tools/: diff.py  mojodbg.py  resolve.py
docs/: conf.py  make.bat
docs/source/: cli.rst  conf.py  index.rst  stats.rst  wrapper_classes.rst
test/: __init__.py  conftest.py  sleepy.py  test_aio.py  test_async.py  test_base.py  test_cli.py  test_config.py  test_semver.py  test_simple.py  test_threads.py
test/data/: austin.json  austin.out  austin.pprof  austin.pstat  austinp.mojo  austinp.resolved.mojo  column.mojo  column.py  diff_a-b.austin  diff_a.austin  diff_b.austin  mp.austin  mp.mojo  repeat.austin  repeat.mojo  simple.austin  simple.prof  test.austin  test.mojo
test/format/: test_compress.py  test_mojo.py  test_mojo_compress.py  test_pprof.py  test_pstat.py  test_speedscope.py
test/stats/: test_austin_file_reader.py  test_austin_stats.py  test_frame.py  test_hierarchical_stats.py  test_sample.py
test/tools/: test_diff.py  test_resolve.py
