# This file is part of "austin-python" which is released under GPL.
#
# See file LICENCE or go to http://www.gnu.org/licenses/ for full license
# details.
#
# austin-python is a Python wrapper around Austin, the CPython frame stack
# sampler.
#
# Copyright (c) 2018-2020 Gabriele N. Tornetta <phoenix1987@gmail.com>.
# All rights reserved.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[tool.poetry]
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
description = "Python wrapper for Austin, the frame stack sampler for CPython"
documentation = "https://austin-python.readthedocs.io"
homepage = "https://github.com/P403n1x87/austin-python"
keywords = ["performance", "profiling", "testing", "development"]
license = "GPL-3.0-or-later"
name = "austin-python"
packages = [
  {include = "austin"},
]
readme = "README.md"
repository = "https://github.com/P403n1x87/austin-python"
version = "0.0.0"

[tool.poetry.scripts]
austin-compress = "austin.format.compress:main"
austin-diff = "austin.tools.diff:main"
austin2pprof = "austin.format.pprof.__main__:main"
austin2speedscope = "austin.format.speedscope:main"

[tool.poetry.dependencies]
dataclasses = "*"
protobuf = "^3.12.2"
psutil = ">=5.7.0"
python = "^3.6"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
codecov = "^2.1.3"
coverage = {extras = ["toml"], version = "^5.2"}
mypy = "^0.770"
nox = "^2020.8.22"
pytest = ">=5.4.2"
pytest-cov = ">=2.8.1"
sphinx = "^3.0.4"
sphinx-autodoc-typehints = "^1.10.3"

[tool.poetry.urls]
issues = "https://github.com/P403n1x87/austin-python/issues"

[tool.poetry-dynamic-versioning]
enable = true

[tool.coverage.run]
branch = true
source = ["austin"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "google"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0", "poetry-dynamic-versioning"]
