# This file is part of "austin-python" which is released under GPL.
#
# See file LICENCE or go to http://www.gnu.org/licenses/ for full license
# details.
#
# austin-python is a Python wrapper around Austin, the CPython frame stack
# sampler.
#
# Copyright (c) 2018-2020 Gabriele N. Tornetta <phoenix1987@gmail.com>.
# All rights reserved.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[project]
name = "austin-python"
description = "Python wrapper for Austin, the CPython frame stack sampler."
authors = [
  {name = "Gabriele N. Tornetta", email="phoenix1987@gmail.com"},
]
license = "GPL-3.0-or-later"
readme = "README.md"

keywords = ["performance", "profiling", "testing", "development"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.10"
dependencies = [
  "protobuf~=3.12",
  "psutil>=5.7.0",
  "toml~=0.10",
]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/P403n1x87/austin-python"
documentation = "https://austin-python.readthedocs.io"
repository = "https://github.com/P403n1x87/austin-python"
issues = "https://github.com/P403n1x87/austin-python/issues"

[project.scripts]
austin-compress = "austin.format.compress:main"
austin-diff = "austin.tools.diff:main"
austin2pprof = "austin.format.pprof.__main__:main"
austin2speedscope = "austin.format.speedscope:main"
mojo2austin = "austin.format.collapsed_stack:main"
austinp-resolve = "austin.tools.resolve:main"
mojodbg = "austin.tools.mojodbg:main"

[tool.hatch.envs.tests]
template = "tests"
dependencies = [
  "pytest>=5.4.2",
  "pytest-asyncio",
  "pytest-cov>=2.8.1",
]
[tool.hatch.envs.tests.scripts]
tests = "pytest --cov=austin --cov-report=term-missing --cov-report=xml {args}"

[[tool.hatch.envs.tests.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.checks]
python = "3.13"
template = "checks"
dependencies = [
  "black~=26.3",
  "mypy~=0.990",
  "flake8~=7.3",
  "flake8-annotations~=3.2",
  "flake8-black~=0.4",
  "flake8-bugbear~=25.11",
  "flake8-docstrings~=1.7",
  "flake8-isort~=7.0",
  "isort~=5.13",
]

[tool.hatch.envs.checks.scripts]
typing = "mypy --show-error-codes --install-types --non-interactive {args} austin/ test/"
linting = "flake8 {args} austin/ test/ "

[tool.hatch.envs.coverage]
python = "3.10"
template = "coverage"
dependencies = [
  "coverage[toml]",
  "codecov",
]

[tool.hatch.envs.coverage.scripts]
cov = "coverage xml --fail-under=50"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["austin"]

[tool.coverage.run]
branch = true
source = ["austin"]

[tool.coverage.report]
show_missing = true

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
force-sort-within-sections = true

[tool.mypy]
ignore_missing_imports = true
exclude = [
  "austin/tools/diff.py",
]

[[tool.mypy.overrides]]
module = [
  "austin.format.pprof.profile_pb2",
  "austin.format.pprof",
]
ignore_errors = true

[tool.black]
target-version = ["py310", "py311", "py312", "py313", "py314"]
extend-exclude = '''
(
  /profile_pb2\.py
  | /test/data/column\.py
)
'''

[tool.isort]
force_single_line = true
lines_after_imports = -1
skip = [
  "austin/format/pprof/profile_pb2.py",
  "test/data/column.py",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

